# helmsman

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
docs/: DOCUMENTATION.md
server/: Dockerfile  pyproject.toml  requirements.txt
server/app/: __init__.py  config.py  main.py  orchestrator.py  schemas.py
server/app/api/: agents.py  chat.py  runs.py  templates.py  workflows.py  ws.py
server/app/channels/: base.py  telegram.py
server/app/db/: models.py  session.py
server/app/runtime/: bus.py  callbacks.py  compiler.py  executor.py  llm.py  memory.py  nodes.py  tools.py
server/app/templates/: __init__.py  builtin.py
server/tests/: conftest.py  test_agent_crud.py  test_compiler.py  test_message_delivery.py  test_workflow_execution.py
web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/lib/: api.ts
web/src/pages/: AgentsPage.tsx  BuilderPage.tsx  ChatPage.tsx  MonitorPage.tsx
