[tool.poetry]
name = "helmsman"
version = "0.1.0"
description = "AI Agent Orchestration Platform"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.5"
uvicorn = {version = "0.32.1", extras = ["standard"]}
sqlalchemy = "2.0.36"
pydantic = "2.10.3"
pydantic-settings = "2.6.1"
httpx = "0.28.1"
python-dotenv = "1.0.1"
langgraph = "0.2.53"
langchain-core = "0.3.21"
langchain-openai = "0.2.10"
langchain-anthropic = "0.3.0"
redis = "5.2.0"
faiss-cpu = ">=1.12.0"
sentence-transformers = "3.3.1"
apscheduler = "3.10.4"

[tool.poetry.group.postgres.dependencies]
psycopg2-binary = "2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-asyncio = "0.24.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"
